[package]
name = "valvefetch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["full"] }
scraper = "0.21.0"
indicatif = "0.17.8"
